--- a/styling.css
+++ b/styling.css
@@ -1,6 +1,51 @@
 body {
   background-color: rgb(255, 255, 255);
 }
+
+.navbar {
+    background-color: #47d3e6;
+    overflow: hidden;
+    font-size: xx-large;
+  }
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 50px;
+  }
+  
+  .column {
+    flex: 20%;
+    padding: 30px;
+  }
+  
+  .column img {
+    margin-top: 30px;
+    vertical-align: middle;
+    border-radius: 50px;
+  }
+
+
+
+/*
+ 
+
+.column {
+    float: left;
+    width: 50%;
+    padding: 20px;
+    border-radius: 30px;
+  }
+
+.column2 {
+    float: left;
+    width: 50%;
+    padding: 20px;
+    border-radius: 30px;
+  }
+
+
+
 .grid-test {
     display: grid;
     column-gap: 50px;
@@ -19,7 +64,7 @@ body {
     font-size: 30px;
     text-align: center;
     }
- 
+ */
   
 h1 {
   color: #4f370a;
@@ -27,9 +72,9 @@ h1 {
   text-align: center;
   background-color: bisque;
   padding: 30px;
-
-
 }
+
+
 
 p {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
