--- a/styling.css
+++ b/styling.css
@@ -9,7 +9,7 @@ body {
     padding: 15px;
   }
 
-  .navbar a {
+  .navbar button.{
     float: left;
     color: #f2f2f2;
     font-family: 'Franklin Gothic Extra-Light', 'Arial Narrow';
@@ -19,12 +19,12 @@ body {
     font-size: 20px;
   }
 
-  .navbar a:hover {
+  .navbar button:hover {
       background-color: #ffd0d1;
       color: #4f370a;
     }
   
-  .navbar a.active {
+  .navbar button.active {
     background-color: #fec9ca;
     color: #4f370a
   }
@@ -58,8 +58,6 @@ h1 {
     border: 65px solid, #4f370a;
     padding: 25px;
 }
-
-
 
 p {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
