Added styling to CSS file

--- a/styling.css
+++ b/styling.css
@@ -9,7 +9,7 @@ body {
     padding: 15px;
   }
 
-  .navbar button.{
+  .navbar button {
     float: left;
     color: #f2f2f2;
     font-family: 'Franklin Gothic Extra-Light', 'Arial Narrow';
