--- a/styling.css
+++ b/styling.css
@@ -4,13 +4,13 @@ body {
 
 .slides {
   background-color: #4f370a;
-   padding: 10px 10px;
+  padding: 10px 10px;
   display: flex;
   overflow-x: auto;
   scroll-snap-type: x mandatory;
-  }
+}
 
-  .slides img {
+.slides img {
   object-fit: contain;
   display: flex;
   flex-shrink: 0;
@@ -23,67 +23,84 @@ body {
   align-items: center;
 }
 
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #fec9ca;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #fec9ca;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #aa7777;
+}
+
 .navbar {
-    background-color: #4f370a;
-    overflow: hidden;
-    font-size: 30px;
-    padding: 15px;
-  }
+  background-color: #4f370a;
+  overflow: hidden;
+  font-size: 30px;
+  padding: 15px;
+}
 
-  .navbar button{
-    float: left;
-    background-color: bisque;
-    font-family: 'Franklin Gothic Extra-Light', 'Arial Narrow';
-    text-align: center;
-    padding: 10px;
-    text-decoration: none;
-    font-size: 20px;
-    color:#4f370a; 
-  }
+.navbar button {
+  float: left;
+  background-color: bisque;
+  font-family: "Franklin Gothic Extra-Light", "Arial Narrow";
+  text-align: center;
+  padding: 10px;
+  text-decoration: none;
+  font-size: 20px;
+  color: #4f370a;
+}
 
-  .navbar button:hover {
-      background-color: #ffd0d1;
-      color: #4f370a;
-    }
-  
-  .navbar button.active {
-    background-color: #fec9ca;
-    color: #4f370a
-  }
+.navbar button:hover {
+  background-color: #ffd0d1;
+  color: #4f370a;
+}
 
-  .row {
-    margin: 35px;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 50px;
-  }
-  
-  .column {
-    flex: 20%;
-    padding: 15px;
-  }
-  
-  .column img {
-    background: #fec9ca;
-    padding: 10px 10px;
-    margin-top: 10px;
-    border-radius: 25px;
-  }
+.navbar button.active {
+  background-color: #fec9ca;
+  color: #4f370a;
+}
 
-  h1 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, serif;
-    color: #4f370a;
-    font-size: 40px;
-    text-align: center;
-    background-color: bisque;
-    border: 65px solid, #4f370a;
-    padding: 25px;
-  }
+.row {
+  margin: 35px;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 50px;
+}
+
+.column {
+  flex: 20%;
+  padding: 15px;
+}
+
+.column img {
+  background: #fec9ca;
+  padding: 10px 10px;
+  margin-top: 10px;
+  border-radius: 25px;
+}
+
+h1 {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, serif;
+  color: #4f370a;
+  font-size: 40px;
+  text-align: center;
+  background-color: bisque;
+  border: 65px solid, #4f370a;
+  padding: 25px;
+}
 
 p {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-size: 23px;
   padding-left: 25px;
   color: #4f370a;
-  
 }
