--- a/styling.css
+++ b/styling.css
@@ -4,7 +4,8 @@ body {
 
 .slides {
   background-color: #4f370a;
-  padding: 10px 10px;
+  padding: 5px;
+  border-radius: 25px;
   display: flex;
   overflow-x: auto;
   scroll-snap-type: x mandatory;
@@ -24,17 +25,18 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 20px;
+  width: 15px;
 }
 
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px #fec9ca;
+  box-shadow: #fec9ca;
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
   background: #fec9ca;
   border-radius: 10px;
+  outline: 1px solid solid;
 }
 
 ::-webkit-scrollbar-thumb:hover {
