Fixed HTML formatting with Prettier

--- a/styling.css
+++ b/styling.css
@@ -20,7 +20,6 @@ body {
   scroll-behavior: smooth;
   background-image: url("https://scontent.cdninstagram.com/v/t1.15752-9/337188216_1483359202192128_125901960956712265_n.jpg?stp=dst-jpg_s320x320&_nc_cat=110&ccb=1-7&_nc_sid=5a057b&_nc_ohc=kXS64z01m6sAX-1ell6&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.cdninstagram.com&oh=03_AdSZrtK9w8Il52RsWYWHh5TwdHWpyMbaUhM9YDuh6942Wg&oe=644B1770");
   justify-content: center;
-  align-items: center;
 }
 
 ::-webkit-scrollbar {
@@ -54,7 +53,7 @@ body {
   text-decoration: none;
   display: inline-block;
   font-size: 20px;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .navbar a:hover a.active {
@@ -86,7 +85,6 @@ h1 {
   font-size: 40px;
   text-align: center;
   background-color: bisque;
-  border: 65px solid, #4f370a;
   padding: 25px;
 }
 
