--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   margin: 0;
   background-color: white;
+  margin: 3rem;
 }
 
 header {
@@ -10,37 +11,19 @@ header {
 }
 
 header h1 {
-background-color: #4D4C7D;
-text-shadow: 5px 5px #827397;
-filter: drop-shadow(-10px 10px 20px #827397);
-font-family: Verdana, Geneva, Tahoma, sans-serif;
-padding: 50px;
-margin: 0px auto;
-font-weight: bold;
-line-height: 1 rem;
-text-align: left;
-color: #D8B9C3;
-
-text-align: left;
-font-size: 50px;
-padding: 2rem;
-}
-
-#movies {
-  display: grid;
-  padding: 1rem;
-  gap: 1rem;
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.tile {
-  display: flex;
-  padding: 1rem;
-  margin-bottom: 1rem;
-  gap: 2rem;
-  border-style: outset;
-  border-radius: 1rem;
-  border-color: #F0DBDB;
+  background-color: #4d4c7d;
+  text-shadow: 5px 5px #827397;
+  filter: drop-shadow(-10px 10px 20px #827397);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 50px;
+  margin: 0px auto;
+  font-weight: bold;
+  line-height: 1 rem;
+  text-align: left;
+  color: #d8b9c3;
+  text-align: left;
+  font-size: 50px;
+  padding: 2rem;
 }
 
 img {
@@ -48,14 +31,15 @@ img {
 }
 
 button {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: large;
   border-radius: 0.5rem;
-  background-color: #DBA39A;
+  background-color: #dba39a;
   color: white;
   padding: 0.5rem;
   align-self: end;
 }
 
 .select {
-background-color: #4D4C7D;
-font-size: 30px;
+  background-color: DodgerBlue;
 }
