--- a/style.css
+++ b/style.css
@@ -1,13 +1,30 @@
 * {
-  font-family: "Poppins", sans-serif;
-  padding: 0;
-  margin: 0;
+  padding: 10px;
   background-color: white;
-  margin: 3rem;
+ margin: 50px;
 }
 
-header .select {
-  padding: 2rem;
+.column.side {
+  display: inline-block;
+  background-color: #4d4c7d;
+  height: 500px;
+  width: 75px;
+  margin-left: 50px;
+  width: 25%;
+}
+
+.column.main {
+  display: inline-block;
+
+  width: 50%;
+}
+
+
+/* Clear floats after the columns */
+.row::after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 header h1 {
@@ -18,12 +35,11 @@ header h1 {
   padding: 50px;
   margin: 0px auto;
   font-weight: bold;
-  line-height: 1 rem;
+  /* line-height: 1 rem; */
   text-align: left;
   color: #d8b9c3;
   text-align: left;
   font-size: 50px;
-  padding: 2rem;
 }
 
 img {
@@ -41,19 +57,27 @@ button {
 }
 
 .select {
-  background-color: #827397;
-  padding: 2rem;
+  background-color: #4d4c7d;
+  filter: drop-shadow(-10px 10px 20px #827397);
   padding: 50px;
   margin: 0px auto;
   font-weight: bold;
   line-height: 1 rem;
   text-align: left;
-  color: #d8b9c3;
   text-align: left;
-  font-size: 50px;
   padding: 2rem;
+  height: 100px;
 }
 
+label {
+ font-size: large;
+  color: white;
+  background-color: #4d4c7d;
+}
+
+h1.select {
+  background-color: #4d4c7d;
+}
 .movieInfo {
   background-color: #4d4c7d;
 }
