--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 .column.side {
-  display: inline-block;
+  float: left;
   background-color: #4d4c7d;
   height: 500px;
   width: 75px;
@@ -14,9 +14,13 @@
 }
 
 .column.main {
-  display: inline-block;
-
+  float: left;
+  padding-inline-start: 30px;
   width: 50%;
+  background-color: #4d4c7d;
+  height: 600px;
+  inline-size: 150px;
+
 }
 
 
