--- a/style.css
+++ b/style.css
@@ -1,27 +1,31 @@
 body {
+  margin: 20px;
   background-image: url("https://images8.alphacoders.com/749/749455.png");
-  font-family: Arial, sans-serif;
-}
-
-header {
-  background-color: #2c3e50;
-  color: #fff;
-  text-align: center;
-  padding: 20px 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 header h1 {
+  border-radius: 15px;
+  background-color: #4d4c7d;
+  text-shadow: 5px 5px #827397;
+  filter: drop-shadow(-10px 10px 20px #827397);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 50px;
+  font-weight: bold;
+  line-height: 1 rem;
+  text-align: left;
+  color: #d8b9c3;
+  text-align: left;
+  padding: 2rem;
   margin: 0;
   font-size: 2rem;
-  line-height: 1.2;
   letter-spacing: 1px;
 }
 
-
 label {
-  color: white;
+  color: #d8b9c3;
   margin-right: 10px;
-  font-size: 1.2rem;
+  font-size: 2rem;
   font-weight: bold;
 }
 
@@ -33,7 +37,6 @@ label {
   padding: 8px;
   font-size: 1rem;
   border-radius: 5px;
-  background-color: #fff;
 }
 
 button {
@@ -41,10 +44,11 @@ button {
   padding: 8px 15px;
   border: none;
   border-radius: 5px;
-  background-color: #2c3e50;
-  color: #fff;
-  font-size: 1rem;
+  background-color: #d8b9c3;
+  color: white;
+  font-size: 2rem;
   cursor: pointer;
+  filter: drop-shadow(-10px 10px 20px #827397);
 }
 
 .grid-container {
@@ -54,26 +58,27 @@ button {
 }
 
 .basicInfo {
+  font-size: 30px;
+  text-align: center;
   color: white;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  background-color: rgba(252, 210, 235,.25);
+  background-color: rgba(252, 210, 235, 0.25);
 }
 
 #moviePoster {
-  width: 50%;
+  width: 40%;
   max-width: 400px;
   margin-right: 20px;
   margin-bottom: 10px;
   border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 #movieTrailer {
   width: 50%;
-  height: 600px;
-  margin-top: 10px;
+  height: 500px;
+  padding: 3rem;
   border: none;
   border-radius: 5px;
 }
@@ -84,17 +89,26 @@ button {
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  background-color: rgba(252, 210, 235,.25);
+  background-color: rgba(252, 210, 235, 0.25);
 }
 
 #movieYear {
   margin-top: 0;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 
 #ogTitle {
   margin-top: 0;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   font-weight: bold;
 }
 
+#moviePicker {
+  border-radius: 15px;
+  padding: 1rem;
+  font-size: 1.5rem;
+  background-color: #4d4c7d;
+  color: #d8b9c3;
+  filter: drop-shadow(-10px 10px 20px #827397);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
